<resources>
    <string name="app_name">SV Guide</string>
    <string name="menu_item_friendships">Friendships</string>
    <string name="menu_item_search">Search</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="romanceable">Romanceable</string>
    <string name="all">All</string>
    <string name="love">Love</string>
    <string name="like">Like</string>
    <string name="neutral">Neutral</string>
    <string name="dislike">Dislike</string>
    <string name="hate">Hate</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="menu_item_checklists">Checklists</string>
    <string name="menu_item_add_farm">Add Farm</string>
    <string name="your_farms">Your Farms</string>
    <string name="farm_name_template">%s Farm</string>
    <string name="delete">Delete</string>
    <string name="farm_name">Farm Name</string>
    <string name="farm_type_template">Farm Type: %s</string>
    <string name="confirm_delete_title">Confirm</string>
    <string name="confirm_delete_message">Are you sure you want to delete this farm?</string>
    <string name="edit_farms">Edit Farms</string>
    <string name="farm_type">Farm Type</string>
    <string name="bundle_quantity_completed_template">%d/%d</string>
    <string name="delete_error_message">Delete not allowed, must have at least 1 farm.</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="show_completed">Show Completed</string>
    <string name="traveling_merchant">Traveling Merchant</string>
    <string name="guide">Guide</string>
    <string name="menu_item_purchases">Purchases</string>
    <string name="purchase_pro">Purchase the pro version and never see an ad again!\n\nChecklists for multiple farms.\n\nMore exclusive features coming soon.</string>
    <string name="go_pro">Go Pro $3.49</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="companion_guide">Companion Guide For SV</string>
    <string name="stardew_valley">SV</string>
    <string name="thank_you_pro">Thank you for purchasing the Pro version.</string>
    <string name="billing_not_enabled">Sorry, billing is not available at this time. Please try again later.</string>
    <string name="go_pro_farms">Go Pro to track multiple farms. Never see ads again!</string>
    <string name="banner_ad_id">ca-app-pub-5594325776314197/5332464105</string>
    <string name="play_store_review_message">If you are enjoying the SV Companion app and would love to see more features in the future please help us out by giving us a review.</string>
    <string name="absolutely">Absolutely</string>
    <string name="nope">Nope</string>
    <string name="later">Later</string>
    <string name="sign_background">Sign Background</string>
    <string name="ocean">Ocean</string>
    <string name="river">River</string>
    <string name="lake">Lake</string>
    <string name="other">Other</string>
    <string name="sunny">Sunny</string>
    <string name="rainy">Rainy</string>
    <string name="hide_filter_settings">Hide Filter Settings</string>
    <string name="show_filter_settings">Show Filter Settings</string>
    <string name="time_range_template">%s - %s</string>
    <string name="any">Any</string>
    <string name="toggle_pro_debug_only">Toggle Pro (Debug Only)</string>
    <string name="health">Health</string>
    <string name="energy">Energy</string>
    <string name="gold">Gold</string>
    <string name="common">Common</string>
    <string name="silver">Silver</string>
    <string name="fishing_level_template">Fishing Level: %d</string>
    <string name="behavior_template">Behavior: %s</string>
    <string name="difficulty_template">Difficulty: %d</string>
    <string name="xp_template">XP: %d</string>
    <string name="information">Information</string>
    <string name="locations">Locations</string>
    <string name="legendary_fish_map_cd_template">%s Legendary Fish Map</string>
    <string name="legendary_fish_location_cd_template">%s Legendary Fish Location</string>
    <string name="minerals">Minerals</string>
    <string name="lost_books">Lost Books</string>
    <string name="artifacts">Artifacts</string>
    <string name="price_template">Price: %d</string>
    <string name="mine_levels_template">Mine Levels: %d-%d</string>
    <string name="exit">Exit</string>
    <string name="menu_item_crops">Crops</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="harvest_time">Harvest Time</string>
    <string name="gold_per_day">Gold/Day</string>
    <string name="gold_per_day_template">%.2f Gold/Day</string>
    <string name="stages">Stages</string>
    <string name="planting">Planting</string>
    <string name="day_stage_template">Day: %d</string>
    <plurals name="harvest_stage_template">
        <item quantity="other">Harvest: %d Days</item>
        <item quantity="one">Harvest: %d Day</item>
    </plurals>
    <plurals name="regrowth_stage_template">
        <item quantity="other">Regrowth: %d Days</item>
        <item quantity="one">Regrowth: %d Day</item>
    </plurals>
    <string name="ads_permission_title">Age Verification</string>
    <string name="ads_permission_message">Please, enter your age</string>
    <string name="ads_permission_accept">Enter</string>
    <string name="ads_permission_edit_hint">Your Age</string>
    <string name="purchase">PURCHASE</string>
    <string name="dismiss">Dismiss</string>
</resources>
