<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/filter_villager_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/filter_villager_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/filter_villager_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/filter_villager_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/filter_villager_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neutral" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/filter_villager_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dislike" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/filter_villager_hate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hate" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
