<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/alphaBackground">

    <android.support.constraint.Group
        android:id="@+id/filter_museum_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="
            filter_museum_tab_layout,
            show_completed_text_view,
            show_completed_check_box"
        tools:visibility="visible" />

    <android.support.design.widget.TabLayout
        android:id="@+id/filter_museum_tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@android:color/white"
        app:tabMode="scrollable"
        app:tabTextColor="@android:color/white">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minerals" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost_books" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artifacts" />

    </android.support.design.widget.TabLayout>

    <TextView
        android:id="@+id/show_completed_text_view"
        style="@style/StardewTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_completed"
        app:layout_constraintBottom_toBottomOf="@+id/show_completed_check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/show_completed_check_box" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/show_completed_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_museum_tab_layout" />

    <TextView
        android:id="@+id/toggle_filter_settings_text_view"
        style="@style/StardewTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableEnd="@drawable/ic_chevron_double_down"
        android:drawableRight="@drawable/ic_chevron_double_down"
        android:drawablePadding="10dp"
        android:text="@string/show_filter_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_completed_check_box" />

</android.support.constraint.ConstraintLayout>
