<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/filter_villagers_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/filter_villagers_a_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_z" />

            <android.support.design.widget.TabItem
                android:id="@+id/filter_villagers_z_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_a" />

            <android.support.design.widget.TabItem
                android:id="@+id/filter_villagers_romanceable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/romanceable" />

        </android.support.design.widget.TabLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
