<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <ImageView
        android:id="@+id/pro_offer_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/go_pro"
        android:src="@drawable/pro_static_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/purchases_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="purchase_text_view, purchase_button, restore_purchases_button" />

    <com.pickledgames.stardewvalleyguide.views.SignTextView
        android:id="@+id/purchase_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:margin="8dp"
        app:padding="5dp"
        app:text="@string/purchase_pro"
        app:textSize="22sp" />

    <Button
        android:id="@+id/purchase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@drawable/button_purchase"
        android:paddingHorizontal="64dp"
        android:paddingVertical="15dp"
        android:translationZ="12dp"
        android:text="@string/purchase"
        android:textSize="24sp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pro_offer_img"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restore_purchases_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/restore_purchases"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/purchase_button"
        app:layout_constraintEnd_toEndOf="@id/purchase_button"
        app:layout_constraintStart_toStartOf="@id/purchase_button" />

    <Button
        android:id="@+id/toggle_pro_button"
        android:layout_width="0dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/toggle_pro_debug_only"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/restore_purchases_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.pickledgames.stardewvalleyguide.views.SignTextView
        android:id="@+id/thanks_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchase_text_view"
        app:layout_constraintVertical_bias="1.0"
        app:margin="8dp"
        app:padding="5dp"
        app:text="@string/thank_you_pro"
        app:textSize="22sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
